Release ...
* The default path has been changed to "/usr/5bin:/bin:/usr/bin:" to
  provide maximum System V compatibility if the Heirloom Toolchest is
  also installed.
* The shell now also compiles on HP-UX (B.11.11, B.11.23), AIX 5.1, and
  Tru64 Unix (5.1).

Release 050617
* Temporary files for here documents are now created with mode 0600.
  (They were previously created with mode 0666, which could leave them
  readable and writable by all users depending on the umask.)
* The "kill" command with a "-number" argument was broken in the first
  release and has been fixed.
* The "read" command was broken in the first release and has been fixed.
* The "read" command now accepts the "-r" option (disable backslash as
  an escape character).
* The "umask" command now accepts the "-S" option (process symbolic
  mode strings).
* A SVR4.2-like "TIMEOUT" variable has been introduced. If it is set in
  the initial environment, the shell will terminate after the value of
  the variable in seconds. A value of 0 (the default) means no timeout.
  It is now forbidden to set a trap on SIGALRM because of this.
* The code has been converted to ANSI C.
* A redefinition of the EOF macro caused the shell to hang on NetBSD.
* Various conversions from pointers to smaller integers caused the shell
  to fail on some 64-bit architectures.
* With GNU libc, multibyte characters no longer leave the word splitting
  in an inconsistent state.
* All code points are now treated as valid in single-byte locales.
* The "SYSV3" variable in the initial environment now causes the "echo"
  command to accept the "-n" option.
* The default path has been changed to "/bin:/usr/bin:".

Release 050614
* Initial release.